# generate-commit

./: Cargo.toml  Makefile.toml  README.md  log4rs.yaml  pyproject.toml  ruff.toml  rustfmt.toml
.gemini/: styleguide.md
src/generate_commit/: __init__.py  main.py
