[project]
name = "generate-commit"
version = "0.1.0"
description = "Generate conventional commit messages using git diff"
authors = [{ name = "posky", email = "pjm5810@gmail.com" }]
dependencies = [
    "ollama>=0.4.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/generate_commit"]
